# nettworkers

./: Cargo.toml  Makefile  README.md  game_state_generated.rs  player_commands_generated.rs  players_list_generated.rs  schema_generated.rs
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: interpolator.rs  main.rs  predictor.rs  render.rs
client/src/game_logic/: mod.rs  settings_state.rs  ui_state.rs
client/src/ui/: context.rs  layout.rs  mod.rs  screens.rs  style.rs  widget.rs
scenes/: scene_2.json  scene_3.json
server/: Cargo.toml
server/src/: main.rs
server/tests/: integration_tests.rs
shared/: Cargo.toml
shared/src/: game_state.fbs  lib.rs  player_commands.fbs
shared/src/state/: mapper.rs  mod.rs  mutate.rs  physics.rs
src/: client.rs  game_state.fbs  player_commands.fbs  players_list.fbs  render.rs  server.rs  state.rs
src/scenes/: scene_1.json  scene_2.json
src/state/: connector.rs  mapper.rs  mod.rs  model.rs  mutate.rs  physics.rs  state.rs
