[package]
name = "multi_server"
version = "0.1.0"
edition = "2021"

[dependencies]
flatbuffers = "25.2.10"
serde = { version = "1.0.218", features = ["derive"] }
macroquad = "0.4.13"
serde_json = "1.0.140"


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
